--- a/Weather/Weather.Android/Properties/AndroidManifest.xml
+++ b/Weather/Weather.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="1.1" package="com.companyname.weather" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="Weather.Android" android:icon="@mipmap/icon"></application>
+	<application android:label="Weather.Android" android:icon="@mipmap/icon">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCD9eREpl28zzHAut3clAQPeRWyU-UKfEY" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+		<uses-library android:name="org.apache.http.legacy" android:required="false" />
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
