--- a/Weather/Weather/Weather.csproj
+++ b/Weather/Weather/Weather.csproj
@@ -19,40 +19,43 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Views\MainTabbedPage.xaml.cs">
-      <DependentUpon>MainTabbedPage.xaml</DependentUpon>
+    <Compile Update="Pages\MainAdMobPage.xaml.cs">
+      <DependentUpon>MainAdMobPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\TodayPage.xaml.cs">
-      <DependentUpon>TodayPage.xaml</DependentUpon>
+    <Compile Update="Views\ConditionsView.xaml.cs">
+      <DependentUpon>ConditionsView.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\MasterDetailPageMaster.xaml.cs">
-      <DependentUpon>MasterDetailPageMaster.xaml</DependentUpon>
+    <Compile Update="Views\DetailView.xaml.cs">
+      <DependentUpon>DetailView.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\MasterDetailPageDetail.xaml.cs">
-      <DependentUpon>MasterDetailPageDetail.xaml</DependentUpon>
+    <Compile Update="Views\ForecastView.xaml.cs">
+      <DependentUpon>ForecastView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\MapView.xaml.cs">
+      <DependentUpon>MapView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\TodayView.xaml.cs">
+      <DependentUpon>TodayView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\MainTabbedPage.xaml">
+    <EmbeddedResource Update="Pages\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\MasterDetailPageDetail.xaml">
+    <EmbeddedResource Update="Pages\MainAdMobPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\MasterDetailPageMaster.xaml">
+    <EmbeddedResource Update="Views\ConditionsView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\CurrentConditionsPage.xaml">
+    <EmbeddedResource Update="Views\DetailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\DetailPage.xaml">
+    <EmbeddedResource Update="Views\ForecastView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\ForecastPage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\MapPage.xaml">
+    <EmbeddedResource Update="Views\MapView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
